# Telegram-Bot

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  state.py
handlers/: __init__.py  callbacks.py  commands.py  messages.py
resources/messages/: cv.txt  gpt.txt  image_recognition.txt  main.txt  quiz.txt  recommendations.txt  talk.txt  translator.txt  voice_chat_gpt.txt  welcome.txt
services/: __init__.py  base.py  factory.py  openai_service.py
utils/: __init__.py  messaging.py  resources.py
